Spacetime VM setup